# beetle

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_PLAN.md  README.md  README.zh-CN.md  board_presets.toml  build.cmd  build.ps1  build.rs  build.sh  cfg.toml  deploy-linux.sh  display-preview.html  partitions.csv  partitions_32mb.csv  partitions_8mb.csv  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3.board
.cargo/: config.toml
.cursor/rules/: beetle-rust.mdc  luckfox-sdk-docker.mdc
.githooks/: pre-commit
.github/workflows/: configure-ui-pages.yml  release.yml  rust.yml
configure-ui/: README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
configure-ui/.cursor/rules/: design-constraints.mdc
configure-ui/docs/: DESIGN.md  STATE_MANAGEMENT.md
configure-ui/src/: App.tsx  index.css  main.tsx
configure-ui/src/api/: client.ts
configure-ui/src/components/: BeetleIcon.tsx  ChannelConnectivityPanel.tsx  ConfirmDialog.tsx  DeviceBanner.tsx  ErrorBoundary.tsx  Layout.tsx  PageHeader.tsx  PcbDecorOverlay.tsx  SectionLoadProgress.tsx  SettingsDrawer.tsx  SettingsSection.tsx  Sidebar.tsx  SystemStatusPanel.tsx  TopBar.tsx
configure-ui/src/config/: layout.ts  themeTokens.ts
configure-ui/src/contexts/: ConfigContext.ts  ConfigProvider.tsx  DeviceContext.ts  DeviceProvider.tsx  NavBlockerContext.ts  SoulUserConfigContext.ts  SoulUserConfigContext.tsx  SoulUserConfigProvider.tsx  ToastContext.ts  ToastProvider.tsx  UnsavedContext.ts  UnsavedProvider.tsx  appPreferencesContext.ts  appPreferencesProvider.tsx
configure-ui/src/hooks/: useAppPreferences.ts  useConfig.ts  useConfigPageLoad.ts  useDevice.ts  useDeviceApi.ts  useRevealedPassword.ts  useSaveFeedback.ts  useScrollToTop.ts  useSoulUserConfig.ts  useToast.ts  useUnsaved.ts
configure-ui/src/i18n/: index.ts  language.ts  resources.ts
configure-ui/src/pages/: AIConfigPage.tsx  AudioConfigPanel.tsx  ChannelsConfigPage.tsx  DeviceConfigLayout.tsx  DevicePage.tsx  DisplayConfigPage.tsx  DisplayConfigPanel.tsx  HardwareGpioPanel.tsx  PlaceholderPage.tsx  SkillsPage.tsx  SoulUserPage.tsx  SystemConfigPage.tsx  SystemLogsPage.tsx
configure-ui/src/providers/: ThemeAndBaseline.tsx
configure-ui/src/store/: deviceStatusStore.ts
configure-ui/src/theme/: appTheme.ts  panelStyles.ts  pcbSurface.ts
configure-ui/src/types/: appConfig.ts  asyncState.ts  audioConfig.ts  displayConfig.ts  hardwareConfig.ts
configure-ui/src/util/: hardwareDeviceId.ts  soulUserFormat.ts
docs/: README.md  architecture.md  configuration.md
docs/assets/: README.md
docs/en-us/: README.md  architecture.md  config-api.md  configuration.md  display.md  hardware-device-config.md  hardware.md  linux-release-rollback.md  llm-providers.md  tools.md
docs/zh-cn/: README.md  architecture.md  config-api.md  configuration.md  display.md  hardware-device-config.md  hardware.md  linux-release-rollback.md  llm-providers.md  tools.md
intent-trainer/: README.md  eval_accuracy.py  evolve.py  requirements.txt  train.py
intent-trainer/data/: README.md  generate_synthetic_data.py  probe.txt  split_data.py  test.txt  train.txt
intent-trainer/data/samples/: board_info.txt  cron.txt  fallback.txt  fetch_url.txt  files.txt  get_time.txt  gpio_read.txt  gpio_write.txt  kv_store.txt  remind_at.txt  system_stats.txt  web_search.txt
packaging/linux/: README.txt  beetle.init  beetle.service  hardware.json.example
packaging/linux/embed-deps/: README.md
scripts/: check_linux_musl.sh  check_platform_isolation.sh  firmware_size_baseline.sh  package_linux_release.sh  preview_config_pages.py  sync-luckfox-sdk-to-docker.sh  verify_tls_admission.sh
spiffs_data/config/: SOUL.md
spiffs_data/memory/: MEMORY.md
spiffs_data/skills/: README.md
src/: bg_timer.rs  bootstrap.rs  build_info.rs  bus.rs  commands.rs  config.rs  constants.rs  display.rs  doctor.rs  error.rs  lib.rs  main.rs  metrics.rs  resource.rs  state.rs  util.rs
src/agent/: context.rs  loop.rs  mod.rs
src/audio/: baidu_token.rs  energy.rs  mod.rs  stt_baidu.rs  tts_baidu.rs
src/channels/: chunk.rs  connectivity.rs  dispatch.rs  feishu_ws_frame.proto  http_client.rs  mod.rs  send.rs
src/channels/dingtalk/: mod.rs  send.rs  webhook.rs
src/channels/feishu/: event.rs  frame.rs  mod.rs  send.rs  ws.rs
src/channels/qq/: mod.rs  send.rs  webhook.rs  ws.rs
src/channels/wecom/: mod.rs  (+2 more)
src/cli/: mod.rs
src/cron/: mod.rs
src/heartbeat/: mod.rs
src/i18n/: catalog.rs  error.rs  mod.rs
src/llm/: anthropic.rs  fallback.rs  mod.rs  noop.rs  openai_compatible.rs  retry.rs  sse.rs  types.rs
src/memory/: mod.rs
src/orchestrator/: admission.rs  channel_health.rs  mod.rs  permit.rs  pressure.rs  state.rs
src/ota/: mod.rs
src/platform/: abstraction.rs  audio_drivers.rs  board_info.rs  csrf.rs  display_driver.rs  esp32.rs  fetch_url.rs  fs_atomic.rs  hardware_drivers.rs  heap.rs  heartbeat_file.rs  http_client.rs  linux.rs  mdns.rs  memory_linux.rs  mod.rs  nvs.rs  pairing.rs  psram_vec.rs  response.rs  response_body.rs  sntp.rs  softap_ip.rs  spiffs.rs  spiffs_important_message.rs  spiffs_memory.rs  spiffs_pending_retry.rs  spiffs_remind_at.rs  spiffs_session.rs  spiffs_session_summary.rs  spiffs_skill_meta.rs  spiffs_skill_storage.rs  spiffs_task_continuation.rs  state_root.rs  task_affinity.rs  task_wdt.rs  time.rs  tls_admission.rs  wifi.rs
src/runtime/: mod.rs  stream_http.rs  thread_util.rs
src/skills/: mod.rs
src/tools/: analyze_image.rs  board_info.rs  cron.rs  cron_manage.rs  daily_note.rs  env.rs  fetch_url.rs  file_write.rs  files.rs  get_time.rs  gpio.rs  hardware.rs  hardware_drivers.rs  http_bridge.rs  http_post.rs  http_request.rs  i2c_device.rs  i2c_sensor.rs  kv_store.rs  memory_manage.rs  mod.rs  model_config.rs  network.rs  network_scan.rs  process.rs  proxy_config.rs  registry.rs  remind_at.rs  sensor_watch.rs  session_manage.rs  shell.rs  system_control.rs  system_stats.rs  update_session_summary.rs  voice_input.rs  voice_output.rs  web_search.rs
(+105 files in other folders)
