[package]
name = "beetle"
version = "0.1.0"
edition = "2021"
authors = ["Beetle Team"]
description = "甲虫 (beetle) - ESP32-S3 AI Agent firmware"
license = "MIT OR Apache-2.0"
repository = ""

[package.metadata.esp-idf-sys]
# Board overlay (last) is written by build.sh/build.ps1 from BOARD; default 16MB in repo.
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.esp32s3", "sdkconfig.defaults.esp32s3.board"]

[[package.metadata.esp-idf-sys.extra_components]]
# 飞书长连接入站 WSS 客户端
remote_component = { name = "espressif/esp_websocket_client", version = "1.1" }

[lints.rust]
unexpected_cfgs = { level = "warn" }

[build-dependencies]
embuild = "0.33"

[dependencies]
embedded-io = "0.6"
prost = { version = "0.13", optional = true }
bytes = { version = "1", optional = true }
embedded-svc = "0.28"
esp-idf-svc = "0.51"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# QQ 频道 Ed25519 验签；关 default features 省体积（去掉 fast 预计算表、zeroize）
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
hex = "0.4"
indexmap = "2.0"

[features]
default = ["config_api", "feishu"]
config_api = []
telegram = []
feishu = ["prost", "bytes"]  # 通道核心功能，默认开启
websocket = []
cli = []
ota = []

[profile.release]
opt-level = "s"
lto = true
debug = false
strip = true
codegen-units = 1
# 去掉 panic 展开，显著减小固件（unwinding 表与代码不再链接）
panic = "abort"

# S3 等 Flash 充足时可选用，换取 LLM/JSON 路径更高性能：cargo build --profile release-speed
[profile.release-speed]
inherits = "release"
opt-level = 3

[patch.crates-io]
esp-idf-sys = { path = "vendor/esp-idf-sys" }
