[package]
name = "beetle"
version = "0.1.0"
edition = "2021"
authors = ["Beetle Team"]
description = "甲壳虫 (beetle) - ESP32-S3 AI Agent firmware"
license = "MIT OR Apache-2.0"
repository = ""

[package.metadata.esp-idf-sys]
# Board overlay (last) is written by build.sh/build.ps1 from BOARD; default 16MB in repo.
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.esp32s3", "sdkconfig.defaults.esp32s3.board"]
# esp-idf-sys 默认 v5.2.3；升级到 5.4.x 以匹配 esp-idf-svc 0.52 与 Component Registry（含 esp_websocket_client）。
esp_idf_version = "v6.0"

[[package.metadata.esp-idf-sys.extra_components]]
# 飞书长连接入站 WSS 客户端
remote_component = { name = "espressif/esp_websocket_client", version = "1.3" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(esp_idf_version_at_least_6_0_0)',
] }

[build-dependencies]
# `espidf` feature exposes `embuild::espidf` used when building for ESP targets.
embuild = { version = "0.33.1", features = ["espidf"] }

[dependencies]
embedded-io = "0.7"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
prost = { version = "0.13", optional = true }
bytes = { version = "1", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# QQ 频道 Ed25519 验签；关 default features 省体积（去掉 fast 预计算表、zeroize）
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
hex = "0.4"
getrandom = "0.2"
indexmap = "2.0"
base64 = "0.22"
urlencoding = "2.1"

[target.'cfg(any(target_arch = "xtensa", target_arch = "riscv32"))'.dependencies]
embedded-svc = "0.29"
esp-idf-hal = "0.46.2"
esp-idf-svc = "0.52.1"

[target.'cfg(not(any(target_arch = "xtensa", target_arch = "riscv32")))'.dependencies]
libc = "0.2"
env_logger = "0.11"
# CLI 系统（仅 Linux）
clap = { version = "4.5", features = ["derive", "cargo"] }
# Step 7.2：Linux 配置 API（同步 HTTP，无 tokio）
tiny_http = "0.12"
ureq = { version = "2.12", default-features = false, features = ["tls", "gzip", "socks-proxy"] }
# Linux WSS（飞书/QQ 长连接）：同步客户端，rustls + webpki 根；禁止 default-features 以免拉 tokio。
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

# Linux embedded WiFi：rtnetlink 控制面（仅 target_os=linux 编译进图）
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.20"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "time", "sync"] }
futures = "0.3"

[features]
default = [
    "config_api",
    "feishu",
    "tools_diagnostics",
    "tools_network_extra",
    "thread_panic_catch",
]
config_api = []
telegram = []
feishu = ["prost", "bytes"]  # 通道核心功能，默认开启
websocket = []
cli = []
ota = []
tools_diagnostics = []
tools_network_extra = []
thread_panic_catch = []

[profile.release]
opt-level = 2
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"

# ESP32 固件构建：优化大小而非速度（Flash 受限）
# 使用: cargo build --profile release-size --target xtensa-esp32s3-espidf
[profile.release-size]
inherits = "release"
opt-level = "s"

# esp-idf-svc 0.52.1 未处理 esp_websocket_client（IDF 5.4+）的 WEBSOCKET_EVENT_BEGIN / WEBSOCKET_EVENT_FINISH，
# 会导致 WebSocketEventType::new 返回 ESP_ERR_INVALID_ARG。上游合并后可删本 patch 与 third_party 副本。
[patch.crates-io]
esp-idf-svc = { path = "third_party/esp-idf-svc" }
esp-idf-sys = { git = "https://github.com/mh0pe/esp-idf-sys", branch = "esp-idf-v6-support" }
esp-idf-hal = { path = "third_party/esp-idf-hal" }
